@@ -38,6 +38,7 @@ Not ready yet:
 
 Changes for 1.0beta6:
 
+ - added src/zabbix_agent/stats.c and stats.h (Alexei)
  - added parameter StatFile to zabbix_agentd.conf (Alexei)
  - availability graph for IT Services (Alexei)
  - improvement in user rights handling routines (Alexei)
